# rust-clrs

./: Cargo.toml
examples/: binary_search_tree_exposition.rs  bubble_sort_exposition.rs  heapsort_exposition.rs  horner_rule_exposition.rs  inversions_exposition.rs  linear_search_average.rs  linear_search_invariant.rs  maximum_subarray_exposition.rs  merge_sort_exposition.rs  merge_sort_recurrence.rs  queue_exposition.rs  quicksort_exposition.rs  red_black_tree_exposition.rs  singly_linked_list_exposition.rs  stack_exposition.rs  tree_representations_exposition.rs  two_sum_exposition.rs
src/: lib.rs
src/chapter_01/: comparison.rs  efficiency.rs  examples.rs  mod.rs
src/chapter_02/: binary_search.rs  insertion_sort.rs  linear_search.rs  merge_sort.rs  mod.rs  selection_sort.rs
src/chapter_03/: analysis.rs  asymptotic.rs  functions.rs  mod.rs  proofs.rs
src/chapter_04/: matrix_multiplication.rs  maximum_subarray.rs  mod.rs
src/chapter_05/: hiring.rs  mod.rs  permutation.rs  random.rs
src/chapter_06/: heap.rs  heapsort.rs  mod.rs  priority_queue.rs
src/chapter_07/: mod.rs  partition.rs  quicksort.rs  randomized_quicksort.rs
src/chapter_08/: bucket_sort.rs  counting_sort.rs  mod.rs  radix_sort.rs
src/chapter_09/: min_max.rs  mod.rs  randomized_select.rs  select.rs
src/chapter_10/: linked_list.rs  mod.rs  queue.rs  stack.rs  tree.rs
src/chapter_11/: direct_address.rs  hash_functions.rs  hash_table_chaining.rs  mod.rs  open_addressing.rs
src/chapter_12/: binary_search_tree.rs  mod.rs
src/chapter_13/: mod.rs  red_black_tree.rs
src/chapter_14/: mod.rs  (+2 more)
(+45 files in other folders)
