[package]
name = "clrs-rust"
version = "0.1.0"
edition = "2021"
authors = ["CLRS Rust Contributors"]
description = "CLRS Introduction to Algorithms implementations in Rust"
license = "MIT"
repository = "https://github.com/walkccc/CLRS"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
indexmap = "2.0"
regex = "1.10"
rand = "0.8"

[dev-dependencies]

[lib]
name = "clrs"
path = "src/lib.rs"
